FixedVariables override priority
Documenting and testing fixed variables priority when applying a system template.

Request: CT_BDEPLOY-651
Change-Id: Ie0b55a350b912d716163df5014b3a8ed22f58f03